# riggit

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/: branch.py  conventional_commits.py  hooks.py  stats.py
src/riggit/: __init__.py  cli.py  config.py  git.py  init.py  scan.py
tests/: test_branch.py  test_config.py  test_config_set.py  test_conventional_commits.py  test_hooks.py  test_init.py  test_scan.py  test_stats.py
