[project]
name = "riggit"
version = "0.1.0"
authors = [
    { name = "Ammar Hamady"}
]
description = "A git convention checker CLI: validates commit messages against Conventional Commits format."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
riggit = "riggit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
