[project]
name = "riggit"
version = "0.1.6"
authors = [
    { name = "Ammar Hamady", email = "ammar.hamady007@gmail.com"}
]
description = "A git convention checker CLI: validates commit messages against Conventional Commits format."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
riggit = "riggit.cli:main"

[build-system]
requires = ["setuptools>=68,<70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["riggit*"]
